[package]
name = "elite_shield_tester"
version = "0.2.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
serde = { version = "1", features = ["derive"] }
itertools = "0.8.0"
structopt = "0.3.3"

[profile.release]
lto = true
codegen-units = 1
